tests/expectations/compiler/records/init_expression_type_fail.out
Error [ETYC0372057]: Only entry point fns can have a record as input or output.
    --> compiler-test:12:34
     |
  12 | fn mint(r0: address, r1: u64) -> Token {
     |                                  ^^^^^
Error [ETYC0372117]: Expected type `address` but type `u64` was found.
    --> compiler-test:14:16
     |
  14 |         owner: r1, // This variable should be type address.
     |                ^^
Error [ETYC0372117]: Expected type `u64` but type `address` was found.
    --> compiler-test:15:17
     |
  15 |         amount: r0, // This variable should be type u64.
     |                 ^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
